# statistic_distribution

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bernoulli.hpp  expected_value.hpp  normal.hpp
scripts/: install_dependencies.sh  push_branches.sh
src/: bernoulli.cpp  expected_value.cpp
